welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '=' expected but ';' found.
  for (i<-0 to (nums.length-1){
^indexOfValue:9: error: ')' expected but 'return' found.
  return p
  ^